--- a/QuickSort/QuickSort.Tests/QuickSort.Tests.csproj
+++ b/QuickSort/QuickSort.Tests/QuickSort.Tests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Pivot_Middle.cs" />
     <Compile Include="Pivot_First.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pivot_Last.cs" />
